# flower-exchange-application

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile.backend  README.md  docker-compose.yml
docs/: architecture.md  auditability.md  frontend-style-guide-tailwind.md  release-checklist.md  setup.md
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/: App.tsx  index.css
frontend/src/auth/: authContext.tsx
frontend/src/pages/: AdminMonitoringPage.tsx  BatchUploadPage.tsx  DashboardPage.tsx  LoginPage.tsx  (+3 more)
src/api/: auth.cpp  auth.hpp  contracts.md  controllers.hpp  order_controller.cpp  orderbook_controller.cpp  report_controller.cpp
src/app/: exchange_service.cpp  exchange_service.hpp
src/domain/: order.cpp  order.hpp
src/ingest/: csv_parser.cpp  csv_parser.hpp
src/matching/: matching_engine.cpp  matching_engine.hpp  order_book.cpp  order_book.hpp
src/persistence/: repositories.cpp  repositories.hpp
src/realtime/: ws_server.cpp  ws_server.hpp
src/validation/: validator.cpp  validator.hpp
tasks/: prd-flower-exchange-platform.md  prd-frontend-css-redesign-tailwind.md  tasks-flower-exchange-platform.md  tasks-frontend-css-redesign-tailwind.md
tests/: test_main.cpp
tests/acceptance/: example6_test.cpp
tests/integration/: auth_and_role_test.cpp  batch_flow_test.cpp  order_flow_test.cpp  realtime_event_test.cpp
tests/performance/: perf_smoke_test.cpp
tests/testdata/: testcase_7.csv
tests/unit/: matching_engine_test.cpp  order_book_test.cpp  validator_test.cpp
(+2 files in other folders)
